--- a/automationtests/src/main/resources/admin/TestData/CreateDocumentCategory/testdata.admin.CreateDocumentCategory.mapping.yml
+++ b/automationtests/src/main/resources/admin/TestData/CreateDocumentCategory/testdata.admin.CreateDocumentCategory.mapping.yml
@@ -51,7 +51,7 @@ testdata:
          version: $IGNORE$
          id: $IGNORE$
          errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
-         messageerrors0: $errors:CommonMSDErrorMssg_Code:errorMessage_Missing$
+         messageerrors0: $errors:CommonMSDErrorMssg_Code:errorMessage_Empty$
          
    Admin_CreateDocumentCategory_Invalid_InputParameter_Code_Empty:
       input.create-document-category-request:
