--- a/automationtests/src/main/resources/admin/TestData/CreateMachine/testdata.admin.CreateMachine.mapping.yml
+++ b/automationtests/src/main/resources/admin/TestData/CreateMachine/testdata.admin.CreateMachine.mapping.yml
@@ -2,7 +2,7 @@ testdata:
    Admin_CreateMachine_All_Valid_Smoke:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -21,8 +21,8 @@ testdata:
    Admin_CreateMachine_All_Valid_Mandatory_Fields:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
-         macAddress: $REMOVE$
+         rid: $REMOVE$
+         macAddress: 61-D3-FD-12-C9-ED
          serialNum: ''
          langCode: eng
          machineSpecId: 1001
@@ -37,7 +37,6 @@ testdata:
          RserialNum: ''
          RvalidityDateTime: $IGNORE$
          RcreatedDateTime: $IGNORE$
-         RmacAddress: $IGNORE$
      
    Admin_CreateMachine_Valid_Deact_Prim_Lang_MC_WithSecon_Language:
       input.search-request:
@@ -84,7 +83,7 @@ testdata:
    Admin_CreateMachine_inValid_removing_publicKey:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -101,7 +100,7 @@ testdata:
    Admin_CreateMachine_Invalid_publicKey_As_blank:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -118,7 +117,7 @@ testdata:
    Admin_CreateMachine_Invalid_publicKey_above_maxlength_1024:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -135,7 +134,7 @@ testdata:
    Admin_CreateMachine_Invalid_publicKey:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -152,7 +151,7 @@ testdata:
    Admin_CreateMachine_Invalid_validitydate_Format:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -169,7 +168,7 @@ testdata:
    Admin_CreateMachine_Invalid_Machine_Zone:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -197,12 +196,12 @@ testdata:
          isActive: true
       output.output-1-expected-error-response:
          responsetime: $IGNORE$
-         errorCodeerrors0: $errors:CommonMSDErrorCode:noPrimaryLangErrorCode$
-         messageerrors0: 'Cannot create data in secondary language as data does not exist in primary language'
+         errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
+         messageerrors0: 'Invalid id passed for Secondary language'
    Admin_CreateMachine_Invalid_InputParameter_Missing:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          langCode: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
@@ -219,7 +218,7 @@ testdata:
    Admin_CreateMachine_Invalid_Language_Code:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: fra
@@ -236,7 +235,7 @@ testdata:
    Admin_CreateMachine_Invalid_Language_Code_Blank:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: ''
@@ -253,7 +252,7 @@ testdata:
    Admin_CreateMachine_Invalid_Machine_Name_Blank:
       input.search-request:
          name: ''
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -270,7 +269,7 @@ testdata:
    Admin_CreateMachine_Invalid_Zone_Code_Blank:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -287,7 +286,7 @@ testdata:
    Admin_CreateMachine_Invalid_Zone_nonExisting:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -304,7 +303,7 @@ testdata:
    Admin_CreateMachine_Invalid_Zone_nonAccessable:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -318,10 +317,26 @@ testdata:
          errorCodeerrors0: KER-MSD-436
          messageerrors0: 'Admin not authorized to access this Machine for this Zone'                   
    
+   Admin_CreateMachine_Invalid_MAC_Address_Blank:
+      input.search-request:
+         name: Dummy MachineTest
+         rid: $REMOVE$
+         macAddress: ''
+         serialNum: FB5962911687
+         langCode: eng
+         machineSpecId: 1001
+         ipAddress: 192.168.0.424
+         zoneCode: CST
+         requesttime: $TIMESTAMPZ$
+         isActive: true
+      output.output-1-expected-error-response:
+         responsetime: $IGNORE$
+         errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
+         messageerrors0: 'request.macAddress: Should not be blank or size must be between 1 and 64'              
    Admin_CreateMachine_inValid_MachineName_AboveMaxLen64:
       input.search-request:
          name: $TestData:validStringLength65$
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -338,7 +353,7 @@ testdata:
    Admin_CreateMachine_inValid_MacAddress_AboveMaxLen64:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: $TestData:validStringLength65$
          serialNum: FB5962911687
          langCode: eng
@@ -350,12 +365,12 @@ testdata:
       output.output-1-expected-error-response:
          responsetime: $IGNORE$
          errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
-         messageerrors0: 'request.macAddress: Should not be blank or size must be between 0 and 64'
+         messageerrors0: 'request.macAddress: Should not be blank or size must be between 1 and 64'
          
    Admin_CreateMachine_inValid_SerialNumber_AboveMaxLen64:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: $TestData:validStringLength65$
          langCode: eng
@@ -367,12 +382,12 @@ testdata:
       output.output-1-expected-error-response:
          responsetime: $IGNORE$
          errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
-         messageerrors0: 'request.serialNum: Should not be blank or size must be between 0 and 64' 
+         messageerrors0: 'request.serialNum: size must be between 0 and 64' 
          
    Admin_CreateMachine_inValid_IPAddress_AboveMaxLen17:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -389,7 +404,7 @@ testdata:
    Admin_CreateMachine_inValid_MSpecID_AboveMaxLen36:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: eng
@@ -406,7 +421,7 @@ testdata:
    Admin_CreateMachine_inValid_LangCode_AboveMaxLen3:
       input.search-request:
          name: Dummy MachineTest
-         rid: TestMach
+         rid: $REMOVE$
          macAddress: 61-D3-FD-12-C9-ED
          serialNum: FB5962911687
          langCode: engr
