--- a/automationtests/src/main/resources/admin/TestData/DeviceProviderRegister/testdata.admin.DeviceProviderRegister.mapping.yml
+++ b/automationtests/src/main/resources/admin/TestData/DeviceProviderRegister/testdata.admin.DeviceProviderRegister.mapping.yml
@@ -116,7 +116,7 @@ testdata:
          isActive: 'str'
       output.output-1-expected-error-response:
          errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
-         messageerrors0: $errors:CommonMSDErrorMssg_IsActive:errorMessage_invalidVal$
+         messageerrors0: 'Invalid Format in field : isActive'
          responsetime: $IGNORE$
          
    Admin_DeviceProviderRegister_inValid_requestTime_format:
