--- a/automationtests/src/main/resources/admin/TestData/RegisterFTP/testdata.admin.RegisterFTP.mapping.yml
+++ b/automationtests/src/main/resources/admin/TestData/RegisterFTP/testdata.admin.RegisterFTP.mapping.yml
@@ -126,7 +126,7 @@ testdata:
          isActive: 'str'
       output.output-1-expected-error-response:
          errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
-         messageerrors0: $errors:CommonMSDErrorMssg_IsActive:errorMessage_invalidVal$
+         messageerrors0: 'Invalid Format in field : isActive'
          responsetime: $IGNORE$
          
    Admin_RegisterFTP_inValid_requestTime_format:
