--- a/automationtests/src/main/resources/admin/TestData/RegisterMDS/testdata.admin.RegisterMDS.mapping.yml
+++ b/automationtests/src/main/resources/admin/TestData/RegisterMDS/testdata.admin.RegisterMDS.mapping.yml
@@ -160,7 +160,7 @@ testdata:
          risActive: anyThing
       output.output-1-expected-error-response:
          errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
-         messageerrors0: $errors:CommonMSDErrorMssg_IsActive:errorMessage_invalidVal$
+         messageerrors0: 'Invalid Format in field : isActive'
          responsetime: $IGNORE$
 
    Admin_RegisterMDS_inValid_swCreateDateTime_format:
