--- a/automationtests/src/main/resources/admin/TestData/UpdateDeviceProvider/testdata.admin.UpdateDeviceProvider.mapping.yml
+++ b/automationtests/src/main/resources/admin/TestData/UpdateDeviceProvider/testdata.admin.UpdateDeviceProvider.mapping.yml
@@ -160,7 +160,7 @@ testdata:
          isActive: 'str'
       output.output-1-expected-error-response:
          errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
-         messageerrors0: $errors:CommonMSDErrorMssg_IsActive:errorMessage_invalidVal$
+         messageerrors0: 'Invalid Format in field : isActive'
          responsetime: $IGNORE$
          
    Admin_UpdateDeviceProvider_inValid_requestTime_format:
