--- a/automationtests/src/main/resources/admin/TestData/UpdateMDS/testdata.admin.UpdateMDS.mapping.yml
+++ b/automationtests/src/main/resources/admin/TestData/UpdateMDS/testdata.admin.UpdateMDS.mapping.yml
@@ -187,7 +187,7 @@ testdata:
          requesttime: '2018-12-1006:12:52.994Z'
       output.output-1-expected-error-response:
          errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
-         messageerrors0: $errors:CommonMSDErrorMssg_IsActive:errorMessage_invalidVal$
+         messageerrors0: 'Invalid Format in field : isActive'
          responsetime: $IGNORE$
 
    Admin_UpdateMDS_inValid_swCreateDateTime_format:
