--- a/automationtests/src/main/resources/admin/TestData/UpdateRegistrationCenter/testdata.admin.UpdateRegistrationCenter.mapping.yml
+++ b/automationtests/src/main/resources/admin/TestData/UpdateRegistrationCenter/testdata.admin.UpdateRegistrationCenter.mapping.yml
@@ -374,7 +374,7 @@ testdata:
       output.output-1-expected-neg-response:
          Rresponsetime: $IGNORE$
          errorCodeerrors0: $errors:CommonMSDErrorCode:errorCode$
-         messageerrors0: $errors:CommonMSDErrorMssg_IsActive:errorMessage_invalidVal$
+         messageerrors0: 'Invalid Format in field : isActive'
    Admin_UpdateRegCenter_Invalid_missing_mandatory_field:
       input.updateRegCenter-request:
          name: $REMOVE$
